# toyota-key3-hackathon

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx  CredentialCreation.tsx  CredentialDetail.tsx  Nav.tsx  ProposalCreation.tsx  ProposalItem.tsx  ProposalItemDetail.tsx  ProposalList.tsx  TaskItem.tsx  TaskList.tsx
app/src/context/: ApiContext.tsx
app/src/hooks/: useAccounts.ts  useContracts.ts
app/src/proposal_manager/artifacts/: proposal_manager.contract  proposal_manager.json
app/src/proposal_manager/typedContract/build-extrinsic/: proposal_manager.ts
app/src/proposal_manager/typedContract/constructors/: proposal_manager.ts
app/src/proposal_manager/typedContract/contracts/: proposal_manager.ts
app/src/proposal_manager/typedContract/data/: proposal_manager.json
app/src/proposal_manager/typedContract/event-types/: proposal_manager.ts
app/src/proposal_manager/typedContract/events/: proposal_manager.ts
app/src/proposal_manager/typedContract/mixed-methods/: proposal_manager.ts
app/src/proposal_manager/typedContract/query/: proposal_manager.ts
app/src/proposal_manager/typedContract/shared/: utils.ts
app/src/proposal_manager/typedContract/tx-sign-and-send/: proposal_manager.ts
app/src/sbt/artifacts/: sbt.contract  sbt.json
app/src/sbt/typedContract/build-extrinsic/: sbt.ts
app/src/sbt/typedContract/constructors/: sbt.ts
app/src/sbt/typedContract/contracts/: sbt.ts
app/src/sbt/typedContract/data/: sbt.json
app/src/sbt/typedContract/event-types/: sbt.ts
app/src/sbt/typedContract/events/: sbt.ts
app/src/sbt/typedContract/mixed-methods/: sbt.ts
app/src/sbt/typedContract/query/: sbt.ts
app/src/sbt/typedContract/shared/: utils.ts
app/src/sbt/typedContract/tx-sign-and-send/: sbt.ts
app/src/task_manager/artifacts/: task_manager.contract  task_manager.json
app/src/task_manager/typedContract/build-extrinsic/: task_manager.ts
app/src/types/: task.ts
contract/: .gitignore  package.json  swanky.config.json
contract/contracts/proposal_manager/: Cargo.toml  lib.rs
contract/contracts/sbt/: Cargo.toml  lib.rs  traits.rs
contract/contracts/task_manager/: Cargo.toml  lib.rs  traits.rs
patches/: @astar-network__swanky-core@1.0.11.patch
(+9 files in other folders)
