[package]
name = "proposal_manager"
version = "1.0.0"
edition = "2021"
authors = ["AustinZhu"]

[dependencies]

ink = { version = "4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP34 via brush feature
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34"] }
sbt = { path = "../sbt", default-features = false, features = ["ink-as-dependency"] }
task_manager = { path = "../task_manager", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "proposal_manager"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "openbrush/std",
    "sbt/std",
    "task_manager/std",
]
ink-as-dependency = []
